[package]
name = "rs-yarp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "0.1.0"
gtk = { version = "0.5.1", package = "gtk4" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"